<resources>
    <string name="app_name">A Spasso sulle Mura</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_info">Info</string>
    <string name="title_activity_monu_details">monu_details</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="punti_di_salita_title">Punti di salita</string>
    <string name="punti_di_salita">Torre Santa Maria, Torre Piezometrica, Piazza delle Gondole, Torre di Legno.</string>
    <string name="orari_title">Orari di apertura</string>
    <string name="orari">
        <b>Dal Lunedì prima di Pasqua alla prima Domenica di Novembre.</b>
        \ntutti i giorni dalle ore 9.00 alle 19.00
        <b>\n\nGiugno, Luglio, Agosto</b>
        \n\n<i>Giovedì, Venerdì, Sabato</i>
        \ndalle ore 9.00 alle 21.00
        \n\n<i>Domenica, Lunedì, Martedì, Mercoledì</i>
        \ndalle ore 9.00 alle 19.00
        <b>\n\nDa Novembre alla Domenica prima di Pasqua</b>
        \ntutti i giorni dalle ore 10.00 alle 15.30
        \n\nLe biglietterie chiudono 30 minuti prima.
        \nIl percorso chiude in caso di maltempo.
    </string>
    <string name="biglietti_title">Biglietti di ingresso</string>
    <string name="biglietti">
        <b>Intero: € 3.00</b>
        \n<b>Abbonamento mensile: € 20.00</b>
        \n<b>Abbonamento annuale: € 40.00</b>
        \n\n<b>Gratuito</b> per residenti, bambini fino a 8 anni, disabili con accompagnatore, guide turistiche/accompagnatori turistici.
    </string>
    <string name="accessibilita_title">Accessibilità
        </string>
    <string name="accessibilita">Accesso per i visitatori diversamente abili presso Torre Piezometrica, Piazza delle Gondole e Torre di Legno.
        \n\nIl percorso in quota è accessibile in autonomia dalla Torre di Legno alla Torre del Barbagianni e nell’intero tratto da Piazza Gondole a Porta Manin.
        \n\nPercorso in quota parzialmente accessibile.
        </string>
    <string name="didattica_title">Didattica</string>
    <string name="didattica">Visite guidate da Torre Santa Maria ore 11.00 e ore 17.00
        \n<b>€ 2.00</b>
            </string>
    <string name="informazioni_title">Informazioni</string>
    <string name="informazioni"><b>+39 050 0987480</b>
        \n<b>tutti i giorni dalle 9.00 alle 19.00</b>
    </string>
    <string name="action_settings">Settings</string>
    <string name="alarmDesctr">
        Prima di tutto scegli un ingresso tra quelli disponibili, e poi scegli un’orario.
        \nFine. Non devi fare altro.
        \nSappi però puoi scegliere solo date nel mese corrente. Ogni tanto apparirà una notifica che ti avvertirà del fatto che stiamo cercando la tua posizione, questa
        ci serve per avvisarti nel miglior momento possibile. Cercheremo di non abusare di questo permesso. Controlleremo solo quando necessario.
        \nDetto questo; perchè non fai un giro per Pisa mentre aspetti?
        \n\nPS: mi raccomando non spegnere il GPS o l’allarme salterà.
        </string>
    <string name="alarmDesctrTit">
        Dicci quando vuoi salire,\nal resto pensiamo noi.</string>
    <string name="descrizione_home">Il camminamento in quota delle Mura di Pisa ha riaperto al pubblico con un percorso di 3 km, da Piazza dei Miracoli a Piazzetta Del Rosso, e quattro punti di salita per offrire un inedito punto di vista.
        \nA terra 20.000 m² di verde restituiti alla città, una pista ciclopedonale e una suggestiva illuminazione che consentirà di ammirare anche di notte i tratti di mura e i bastioni mirabilmente recuperati.
    </string>
    <string name="TorPiezoDesc">Si accede dalla porta posta sulle mura,subito accanto alla torre.
    \nAccesso anche per disabili.</string>
    <string name="TorSanMarDesc">Si accede dal prato di Piazza dei Miracoli.
    \nI disabili non possono accedere alle mura dalla Torre Santa Maria.</string>
    <string name="PiazGondDesc">La caratteristica principale della piazza è il bacino d’acqua tutt’ora visibile, chiamato Porto delle Gondole.
    \nAccesso anche per disabili.</string>
    <string name="TorLegnDesc">Si accede da Piazza del Rosso, attraverso una cancellata.
    \nAccesso anche per disabili.</string>
    <string name="TorLegnDescFull">
        \nLorem ipsum dolor sit amet, consectetur adipiscing elit.
        Ut lacinia ultrices metus, non tincidunt dui imperdiet non. Duis vitae convallis neque. Pellentesque sodales diam nec varius vehicula. In hac habitasse platea dictumst.
        Morbi non sem magna. Aliquam justo felis, commodo a vestibulum quis, iaculis at ipsum. Sed arcu mi, vulputate ut mi eu, porta convallis elit. Sed non diam non risus mollis finibus.
        Fusce tristique mollis massa. Morbi finibus augue vitae auctor aliquet. Quisque porttitor massa non convallis gravida.
        Mauris vel eleifend risus, vitae convallis massa. Phasellus rhoncus, purus vitae rhoncus mollis, metus dolor sodales ante, ultricies suscipit sapien orci eu metus.
        Aenean suscipit tincidunt neque, et vestibulum sem rutrum quis. Sed a ipsum ex. Pellentesque sit amet eleifend ligula.
        Phasellus facilisis tellus odio, in facilisis est venenatis et. Sed quis dolor ornare ante dapibus laoreet  vel lorem. Nam a arcu diam. Sed venenatis ex ac nunc varius, id placerat neque commodo. Nulla ac lorem lectus. Cras eget fringilla leo, nec scelerisque est.
    </string>
    <string name="Annulla">Annulla</string>
    <string name="VuoiSalire">Vuoi salire alle ore:</string>
    <string name="Indicazioni">Indicazioni</string>
</resources>